--- a/SymfonySki/templates/registration/register.html.twig
+++ b/SymfonySki/templates/registration/register.html.twig
@@ -3,15 +3,108 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <section id="formRegister">
+        <div>
+            <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.name) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.name) }}
+            {{ form_row(registrationForm.plainPassword) }}
+            <div id="terms">
+                <span>Agree Terms {{ form_row(registrationForm.agreeTerms) }}</span>
+            </div>
+            <span>Already have an account ? <a href="{{ path('app_login') }}">Login</a></span>
+            <button type="submit" class="btn">Register</button>
+            {{ form_end(registrationForm) }}
+        </div>
+    </section>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: "Poppins Medium";
+        }
+
+        #formRegister{
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        div{
+            width: 30%;
+            height: 60%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        form{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            width: 100%;
+        }
+
+        form div{
+            width: 100%;
+        }
+
+        label{
+            display: none;
+        }
+
+        h1{
+            text-align: center;
+            margin-top: 25px;
+            margin-bottom: 25px;
+        }
+
+        input{
+            background-color: lightgray;
+            height: 60px;
+            margin-top: 25px;
+            border: none;
+            border-radius: 3px;
+            font-size: large;
+            text-align: center;
+            width: 100%;
+        }
+
+        input::placeholder{
+            text-align: center;
+        }
+
+        a{
+            text-decoration: none;
+            margin-left: 5px;
+        }
+
+
+        button {
+            background-color: blue;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            border: none;
+            margin-top: 30px;
+            height: 150px;
+            border-radius: 3px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        #registration_form_agreeTerms{
+            height: 15px;
+        }
+
+    </style>
 {% endblock %}
