--- a/SymfonySki/templates/account/index.html.twig
+++ b/SymfonySki/templates/account/index.html.twig
@@ -4,14 +4,41 @@
 
 {% block body %}
 
-
-
-    {% if app.user %}
-        <h1>Vous êtes connéctes en tant que {{ user.name }}</h1>
-        <div class="mb-3">
-            <a href="{{ path('app_logout') }}">Logout</a>
+    <section id="hautProfil">
+        <div id="UserImage">
+            {% if user.image %}
+                <img src="{{ user.image }}" alt="Photo de profil">
+                <a href="/station/{{ user.id }}/edit">Modifier votre photo de profil</a>
+            {% else%}
+                <img src="https://us.123rf.com/450wm/happyvector071/happyvector0711904/happyvector071190414608/120957993-illustration-cr%C3%A9ative-de-l-espace-r%C3%A9serv%C3%A9-de-profil-d-avatar-par-d%C3%A9faut-isol%C3%A9-sur-fond-maquette-de.jpg?ver=6" alt="photo de profil vierge">
+                <a href="/station/{{ user.id }}/edit">Ajouter une photo de profil</a>
+            {% endif %}
         </div>
-    {% endif %}
+        <div id="UserName">
+            <div id="UserLinks">
+                <a href="{{ path('app_logout') }}">Logout</a>
+                <a href="/station/{{ user.id }}/edit">Modifier votre profil</a>
+            </div>
+            <div id="h1Name">
+                <h1>{{ user.name }}</h1>
+            </div>
+        </div>
+    </section>
+    <section id="basProfil">
+        {% if user.description %}
+            <p>{{ user.description }}</p>
+        {% endif %}
+        <a href="/station/{{ user.id }}/edit">Ajouter/Modifier votre description</a>
+    </section>
+
+
+
+
+
+
+
+
+
 
 
 
@@ -23,8 +50,55 @@
             font-family: "Poppins Medium";
         }
 
-        h1{
-            text-align: center;
+        #hautProfil{
+            height: 60vh;
+            display: flex;
+        }
+
+
+
+        #UserImage{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+        }
+
+        #UserImage img{
+            width: 320px;
+        }
+
+        #UserName{
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+        }
+
+        #UserLinks{
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            height: 40%;
+            margin-top: 30px;
+        }
+
+        #UserName{
+            display: flex;
+            align-items: center;
+        }
+
+        #basProfil{
+            height: 30vh;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #basProfil p{
+            width: 70%;
         }
 
     </style>
