--- a/SymfonySki/templates/security/login.html.twig
+++ b/SymfonySki/templates/security/login.html.twig
@@ -102,5 +102,11 @@
             border-radius: 3px;
             cursor: pointer;
         }
+
+        cursor{
+            width: 10px;
+            height: 10px;
+            color: rebeccapurple;
+        }
     </style>
 {% endblock %}
