:sparkles::art: Adding Telesiege informations on Account page

--- a/SymfonySki/templates/account/index.html.twig
+++ b/SymfonySki/templates/account/index.html.twig
@@ -4,29 +4,35 @@
 
 {% block body %}
 
+{% if app.user %}
+    <h1>Vous êtes connecté en tant que {{ user.name }}</h1>
+    <div class="mb-3">
+        <a href="{{ path('app_logout') }}">Logout</a>
+    </div>
 
+    <h2>Liste des telesieges :</h2>
+    <ul>
+        {% for telesiege in telesieges %}
+            <li>{{ telesiege.name }}</li>
+            <td>{{ telesiege.openHour|date('H:i') }}</td>
+            <td>{{ telesiege.closeHour|date('H:i') }}</td>
+            <td>{{ telesiege.fermeture ? 'Oui' : 'Non' }}</td>
+            <td>{{ telesiege.fermetureMessage }}</td>
+        {% endfor %}
+    </ul>
+{% endif %}
 
-    {% if app.user %}
-        <h1>Vous êtes connéctes en tant que {{ user.name }}</h1>
-        <div class="mb-3">
-            <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: "Poppins Medium";
+    }
 
-
-
-    <style>
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            font-family: "Poppins Medium";
-        }
-
-        h1{
-            text-align: center;
-        }
-
-    </style>
+    h1 {
+        text-align: center;
+    }
+</style>
 
 {% endblock %}
