:sparkles: last commit

--- a/SymfonySki/templates/account/index.html.twig
+++ b/SymfonySki/templates/account/index.html.twig
@@ -11,7 +11,7 @@
                 <a href="/station/{{ user.id }}/edit">Modifier votre photo de profil</a>
             {% else%}
                 <img src="https://us.123rf.com/450wm/happyvector071/happyvector0711904/happyvector071190414608/120957993-illustration-cr%C3%A9ative-de-l-espace-r%C3%A9serv%C3%A9-de-profil-d-avatar-par-d%C3%A9faut-isol%C3%A9-sur-fond-maquette-de.jpg?ver=6" alt="photo de profil vierge">
-                <a href="/station/{{ user.id }}/edit">Ajouter une photo de profil</a>
+                <a href="/station/{{ user.id }}/edit">Ajouter un Logo</a>
             {% endif %}
         </div>
         <div id="UserName">
