--- a/SymfonySki/templates/account/add_piste.html.twig
+++ b/SymfonySki/templates/account/add_piste.html.twig
@@ -2,6 +2,15 @@
 
 {% block title %}Ajouter une piste{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/header.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+{% endblock %}
+
+{% block header %}
+    {{ include('header.html.twig') }}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <h1>Ajouter une piste</h1>
