--- a/SymfonySki/public/css/account.css
+++ b/SymfonySki/public/css/account.css
@@ -97,7 +97,7 @@ form {
 
 .welcome-text {
     text-align: center;
-    color: #4a4a4a;
+    color: #34495e;
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 20px;
