--- a/SymfonySki/templates/account/add_piste.html.twig
+++ b/SymfonySki/templates/account/add_piste.html.twig
@@ -4,6 +4,7 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/header.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 {% endblock %}
 
@@ -12,6 +13,15 @@
 {% endblock %}
 
 {% block body %}
+
+    <style>
+        body {
+            background-image: url('{{ asset('images/image1.png') }}');
+            background-size: cover;
+        }
+    </style>
+
+
     <div class="container">
         <h1>Ajouter une piste</h1>
 
