--- a/SymfonySki/templates/profil/edit.html.twig
+++ b/SymfonySki/templates/profil/edit.html.twig
@@ -25,7 +25,7 @@
 
     {{ include('profil/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_profil_index') }}">back to list</a>
+    <a id="a" href="{{ path('app_profil_index') }}">back to list</a>
 
     {{ include('profil/_delete_form.html.twig') }}
 {% endblock %}
